--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Introduction RxJs</title>
 </head>
 <body>
-    <button>Click me</button>
+    <input type="text">
     <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script>
     <script src="index.js"></script>
 </body>
