--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Introduction RxJs</title>
 </head>
 <body>
-    <input type="text">
+    <input type="text" class="input1">
+    <input type="text" class="input2">
+    <p>Comined value: <span></span></p>
     <script src="https://unpkg.com/@reactivex/rxjs@5.3.0/dist/global/Rx.js"></script>
     <script src="index.js"></script>
 </body>
